# fflate

./: .browserslistrc  .gitignore  .npmignore  .parcelrc  .terserrc  CHANGELOG.md  README.md  index.04c4e551.js  index.04c4e551.js.map  index.057c0527.js  index.057c0527.js.map  index.05bd46e2.js  index.05bd46e2.js.map  index.09c4b77e.js  index.09c4b77e.js.map  index.0bac40b2.js  index.0bac40b2.js.map  index.0f9d6637.js  index.0f9d6637.js.map  index.121d208e.js  index.121d208e.js.map  index.18cceb87.js  index.18cceb87.js.map  index.1a82a6e4.js  index.1a82a6e4.js.map  index.1cc25ba1.js  index.1cc25ba1.js.map  index.1d49df3e.js  index.1d49df3e.js.map  index.2243e2c1.js  index.2243e2c1.js.map  index.22d65335.js  index.22d65335.js.map  index.274b2cdc.js  index.274b2cdc.js.map  index.2c2d201f.js  index.2c2d201f.js.map  index.3025cd40.js  index.3025cd40.js.map  index.31117526.js  (+218 more)
.github/ISSUE_TEMPLATE/: bug.md  config.yml  feature_request.md
demo/: App.tsx  augment.d.ts  index.html  index.tsx  package.json  sw.ts
demo/util/: workers.ts
docs/: README.md
docs/classes/: AsyncDecompress.md  AsyncDeflate.md  AsyncGunzip.md  AsyncGzip.md  AsyncInflate.md  AsyncUnzlib.md  AsyncZlib.md  Decompress.md  Deflate.md  Gzip.md  Inflate.md  Unzip.md  UnzipInflate.md  (+28 more)
rs/: Cargo.toml
rs/fflate/: Cargo.toml
rs/fflate-wasm/: Cargo.toml
rs/fflate-wasm/src/: lib.rs
rs/fflate/src/: genlib.rs  lib.rs  main.rs  newlib.rs  oldlib.rs
scripts/: buildUMD.ts  cpGHPages.ts  rewriteBuilds.ts
src/: flate.ts  index.ts  node-worker.ts  worker.ts
test/: 0-valid.ts  1-size.ts  2-perf.ts  3-multiperf.ts  3-streams.ts  3-zip.ts  4-streams.ts  5-async.ts  tsconfig.json  util.ts
(+66 files in other folders)
