[package]
name = "fflate-wasm"
version = "0.0.1"
authors = ["Arjun Barrett <arjunbarrett@gmail.com>"]
edition = "2018"

[dependencies]
fflate = { path = "../fflate", features = ["std"] }
wasm-bindgen = "0.2"

[profile.release]
opt-level = "s"
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[lib]
crate-type = ["cdylib", "rlib"]